--- a/dobble.html
+++ b/dobble.html
@@ -15,7 +15,7 @@
 
     <div id="main">
         <h3>n차 사영평면을 이용한 도블 카드 배치 </h3>
-        n을 입력하세요: 
+        n을 입력하세요:4 
         <input type="text" id="number" vlaue=2 onkeypress="click_check(event)">
         <button id="btSubmit">실행</button>
         <div id='txt'></div>
